// Copyright (c) 2024 - 2025 Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "restate/network.proto";

package restate.core_node_svc;

// Service which is only accessible on nodes that are alive.
service CoreNodeSvc {
  // Create a bidirectional node-to-node stream
  rpc CreateConnection(stream restate.network.Message)
      returns (stream restate.network.Message);

  // Send one-off rpc without establishing a stream
  rpc CallRpc(RpcRequest) returns (RpcResponse);
}

message RpcRequest {
  restate.network.Header header = 1;
  restate.network.RpcCall rpc_call = 2;
}

message RpcResponse {
  restate.network.Header header = 1;
  restate.network.RpcReply rpc_reply = 2;
}
